# hello_rocket_api

./: .env  Cargo.toml  README.md  Rocket.toml
src/: app_settings.json  main.rs
src/app/modules/home/: mod.rs
src/app_settings/: mod.rs
src/data/: controller.rs  mod.rs
src/db/: mod.rs
src/db/entities/: User.rs
src/utils/: config.rs
