[package]
name = "hello_rocket_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rocket = "=0.5.0-rc.3"
rocket = { version = "0.5.0-rc.3", features = ["secrets"] }

sqlx = { version = "0.6.3", features = [ "postgres", "runtime-async-std-native-tls" ] }
async-std = { version = "1.12.0", features = [ "attributes" ] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
chrono = "0.4.26"
